--- a/src/app/public/noticias/noticias.component.html
+++ b/src/app/public/noticias/noticias.component.html
@@ -1,23 +1,23 @@
 <form class="container">
     <div class="form-group row">
-        <!-- <label for="categoria" class="col-6">Categor&iacute;a</label> -->
-        <select name="categoria" id="categoria" class="form-control col-6" >
+        <label for="categoria" class="col-6">Categor&iacute;a</label>
+        <select name="categoria" id="categoria" class="form-control col-6" [(ngModel)]="categoria">
             <option value="soccer">soccer</option>
             <option value="cricket">cricket</option>
             <option value="basketball">basketball</option>
         </select>
     </div>
     <div class="form-group row ml-4">
-        <button type="button" class="btn btn-primary" >Cargar Noticias</button>
+        <button type="button" class="btn btn-primary" (click)="cargarNoticia()">Cargar Noticias</button>
     </div>
 </form>
 <div class="container">
-    <section class="col-md-9">
+    <section class="row">
         <h1 class="col-md-12 text-center h1title">
             Últimas noticias
         </h1>
-        <!-- <div class="row" *ngFor="let item of vector; let i=index">
-            <div class="col mb-6" *ngFor="let c of item">
+        <div class="row" *ngFor="let item of vector; let i=index">
+            <div class="col-md-4 col-sm-12 mb-6" *ngFor="let c of item">
                 
                 <div class="card border-0" >
                     <img src="{{c.img}}" class="card-img-top" alt="..." height="150" width="150">
@@ -29,16 +29,9 @@
                 </div>
                 <br>
             </div>
-        </div> -->
-    </section>
-    <aside class="col-md-3 d-none d-md-block mt-5">
-        <div class="row">
-          <img src="https://i.pinimg.com/originals/c4/b9/f8/c4b9f883038c91c421466f72b1815cc1.jpg">
-          <img src="https://i.pinimg.com/originals/c4/b9/f8/c4b9f883038c91c421466f72b1815cc1.jpg">
-
         </div>
+    </section>
 
-      </aside>
     
 </div>
 
