status estable footer- botones

--- a/src/app/core/shared/components/header/header.component.html
+++ b/src/app/core/shared/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<div class="row">
+    <!-- <img class="content_div_one_photo" src="https://image.freepik.com/foto-gratis/hombre-negocios-asiatico-sentado-coche_53876-129654.jpg" -->
+    <img class="row content_div_one_photo" src="http://www.taurel.com/images/banner-noticias.png"
+    style="width: 100%;">
+    <!-- <p class="text-danger  card-title ">Coroavirus <br>
+        Toda La mejor informacion dia a dia</p> -->
+</div>
