--- a/src/app/core/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/core/shared/components/nav-bar/nav-bar.component.html
@@ -1,45 +1,53 @@
-<div class="row">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+
+
+  <!-- <div id="topheader">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+         <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+         </div>
+         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#home">home<span class="sr-only">(current)</span></a></li>
+              <li><a href="#page1">page 1</a></li>
+              <li><a href="#page2">page 2</a></li>
+              <li><a href="#page3">page 3</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">Link</a></li>
+            </ul>
+         </div>
+      </div>
+    </nav>
+  </div> -->
+
+<div class="" >
+   <nav class="navbar fixed-top navbar-expand-lg navbar-light content">
     <div class="container">
-      <a class="navbar-brand"><i class="fab fa-angular fa-2x fa-lg"></i></a>
+      <a class="navbar-brand bg-danger"><i class="fab fa-angular fa-2x fa-lg"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class=" nav-item">
-            <a class=" nav-link active" aria-current="page" [routerLink]="['noticia']"><i class="fas fa-newspaper"></i>Noticia</a>
+
+      <div class="collapse navbar-collapse " id="navbarNav" style="height: 100%;">
+        <ul class="navbar-nav ms-auto mb-0 mb-lg-0 me-4 mt-0 "  style="height: 100%;">
+          <li class=" nav-item  " >
+            <a class=" nav-link active" aria-current="page" [routerLink]="['noticia']"><i class="fas fa-newspaper icon"></i>Noticia</a>
           </li>
           <li class=" nav-item">
-            <a class="nav-link"  [routerLink]="['covid']"><i class="fas fa-chart-bar mr-2"></i>Covid</a>
+            <a class="nav-link"  [routerLink]="['covid']"><i class="fas fa-chart-bar icon"></i>Covid</a>
           </li>
           <li class=" nav-item">
-            <a class=" nav-link"  [routerLink]="['covid']"><i class="fas fa-gamepad"></i>Juego</a>
+            <a class=" nav-link"  [routerLink]="['covid']"><i class="fas fa-gamepad icon"></i>Juego</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <!-- <nav class="fixed-top navbar navbar-expand-lg navbar-light contet ">
-    <div class="container">
-      <a class="navbar-brand"><i class="fab fa-angular fa-2x fa-lg"></i></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class=" nav-item">
-            <a class=" nav-link active" aria-current="page" [routerLink]="['noticia']"><i class="fas fa-newspaper"></i>Noticia</a>
-          </li>
-          <li class=" nav-item">
-            <a class="nav-link"  [routerLink]="['covid']"><i class="fas fa-chart-bar mr-2"></i>Covid</a>
-          </li>
-          <li class=" nav-item">
-            <a class=" nav-link"  [routerLink]="['covid']"><i class="fas fa-gamepad"></i>Juego</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav> -->
 </div>
-
