--- a/src/app/core/shared/components/header/header.component.html
+++ b/src/app/core/shared/components/header/header.component.html
@@ -1,7 +1,12 @@
-<div class="row">
+<div class="row img">
+    <div class="txt bg-warning">
+        <br>
+        <h1>WELCOME</h1>
+    </div>
     <!-- <img class="content_div_one_photo" src="https://image.freepik.com/foto-gratis/hombre-negocios-asiatico-sentado-coche_53876-129654.jpg" -->
-    <img class="row content_div_one_photo" src="http://www.taurel.com/images/banner-noticias.png"
+    
+    <!-- src=http://www.taurel.com/images/banner-noticias.png /p> --BANER NOTICIAS>  
     style="width: 100%;">
-    <!-- <p class="text-danger  card-title ">Coroavirus <br>
+     <p class="text-danger  card-title ">Coroavirus <br>
         Toda La mejor informacion dia a dia</p> -->
 </div>
