--- a/src/app/public/noticias/noticias.component.css
+++ b/src/app/public/noticias/noticias.component.css
@@ -1,6 +1,11 @@
-
+.fua{
+    color: #353535;
+  font-size: 50px;
+  font-family: "Cormorant Garamond", serif;
+}
 .content{
     height: 100vh;
+   
 }
 .frame {
     width: 90%;
