--- a/src/app/public/noticias/noticias.component.html
+++ b/src/app/public/noticias/noticias.component.html
@@ -20,7 +20,7 @@
    
     <div class="row">
         <section class="row">
-            <h1 class="col-md-12 text-center h1title">
+            <h1 class="col-md-12 text-center fua">
                 Noticias Al Momento Deportes
             </h1>
             <div class="row" *ngFor="let item of vector; let i=index">
