--- a/src/app/core/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/core/shared/components/nav-bar/nav-bar.component.html
@@ -44,7 +44,7 @@
             <a class="nav-link"  [routerLink]="['covid']"><i class="fas fa-chart-bar icon"></i>Covid</a>
           </li>
           <li class=" nav-item">
-            <a class=" nav-link"  [routerLink]="['covid']"><i class="fas fa-gamepad icon"></i>Juego</a>
+            <a class=" nav-link"  [routerLink]="['juego']"><i class="fas fa-gamepad icon"></i>Juego</a>
           </li>
         </ul>
       </div>
